--- a/index.html
+++ b/index.html
@@ -147,11 +147,13 @@
 			<h4>Senior Front-End developer</h4>
 			<h5>Agencia Creativa Dive</h5>
 			<p class="date">Febrero 2018 - Presente</p>
+			<p>Enfrentándo nuevos retos para el 2018 en una nueva agencia, donde podré crecer aún más como profesional y explorar nuevas tecnologías dado que los sitios tienden a ser no convencianales.</p>
 		</div><!-- /.job -->
 		<div class="job">
 			<h4>Senior Front-End developer</h4>
 			<h5>Agencia Digital Reactor</h5>
 			<p class="date">Abril 2015 - Febrero 2018</p>
+			<p>Reactor fue mi primer trabajo en Chile, del cual estoy muy agradecido. Me permitió trabajar en una escala que era imposible antes, a los meses de trabajar me ascendieron a Jefe de Programación y fue un placer hacerlo. Aprendí mucho sobre mí y a cómo trabajar con más personas de mi área como equipo. Tuve el placer de trabajar con grandes clientes dentro de Chile.</p>
 		</div><!-- /.job -->
 		<div class="job">
 			<h4>Socio | Front End</h4>
