--- a/index.html
+++ b/index.html
@@ -78,6 +78,10 @@
 			margin: 0;
 			color: #777;
 		}
+		h5 a {
+			color: #777;
+			text-decoration: none;
+		}
 		p {
 			font-size: 1.1em;
 			color: var(--copy);
@@ -130,8 +134,8 @@
 		<h3>Senior Front-End Developer</h3>
 		<div class="links">
 			<a href="http://saulsolorzano.com">Web</a>
-			<a href="http://twitter.com/saulsolorzano">Twitter</a>
-			<a href="http://github.com/saulsolorzano">GitHub</a>
+			<a href="http://twitter.com/saulsolorzano" target="_blank">Twitter</a>
+			<a href="http://github.com/saulsolorzano" target="_blank">GitHub</a>
 			<a href="mailto:saulsolorzano.com">Correo</a>
 		</div><!--/.links-->
 	</header>
@@ -145,19 +149,19 @@
 		<h2>Experiencia Laboral</h2>
 		<div class="job">
 			<h4>Senior Front-End developer</h4>
-			<h5>Agencia Creativa Dive</h5>
+			<h5><a href="http://dive.cl/" target="_blank">Agencia Creativa Dive</a></h5>
 			<p class="date">Febrero 2018 - Presente</p>
 			<p>Enfrentándo nuevos retos para el 2018 en una nueva agencia, donde podré crecer aún más como profesional y explorar nuevas tecnologías dado que los sitios tienden a ser no convencianales.</p>
 		</div><!-- /.job -->
 		<div class="job">
 			<h4>Senior Front-End developer</h4>
-			<h5>Agencia Digital Reactor</h5>
+			<h5><a href="http://reactor.cl/" target="_blank">Agencia Digital Reactor</a></h5>
 			<p class="date">Abril 2015 - Febrero 2018</p>
 			<p>Reactor fue mi primer trabajo en Chile, del cual estoy muy agradecido. Me permitió trabajar en una escala que era imposible antes, a los meses de trabajar me ascendieron a Jefe de Programación y fue un placer hacerlo. Aprendí mucho sobre mí y a cómo trabajar con más personas de mi área como equipo. Tuve el placer de trabajar con grandes clientes dentro de Chile.</p>
 		</div><!-- /.job -->
 		<div class="job">
 			<h4>Socio | Front End</h4>
-			<h5>JPS Web Design</h5>
+			<h5><a href="http://jps.com.ve" target="_blank">JPS Web Design</a></h5>
 			<p class="date">Febrero 2009 - Noviembre 2014</p>
 			<p>En 2009 fundé junto con dos amigos una pequeña agencia digital en Caracas, Venezuela, nos dedicamos al desarrollo web. Durante mis años trabajando en JPS me desarrollé como profesional y pude enfrentar una gran gama de situaciones que me convirtieron en el profesional que soy hoy.</p>
 		</div><!-- /.job -->
